--- a/style/home.css
+++ b/style/home.css
@@ -31,7 +31,7 @@
     background: var(--gradient-header);
     color: white;
     text-align: center;
-    padding: 5rem 1rem;
+    padding: 2rem 1rem;
     width: 100%;
 }
 
@@ -65,6 +65,7 @@
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     object-fit: cover;
+    object-position: center;
 }
 
 /* Home Responsive */
